# Tips-Endstone

./: README.md  build.sh  pyproject.toml  requirements.txt
src/endstone_tips/: Tips变量.txt  __init__.py  config.py  config.toml  tips.py
src/endstone_tips/messages/: base_message.py
src/endstone_tips/tasks/: base_task.py  boss_bar_task.py  scoreboard.py  tip_task.py
src/endstone_tips/theme/: default.toml
src/endstone_tips/utils/: api.py  plugin_listener.py
src/endstone_tips/utils/variables/: base_variable.py  default_variable.py
